[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/main_container/left_container/export_to_conn/table_conn/TableConn.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main_container.tres" type="Theme" id=3]
[ext_resource path="res://scenes/main_container/left_container/export_to_conn/connection_path/ConnectionPath.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/utility/python_watcher/PythonWatcher.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/main_container/left_container/export_to_conn/export_to_conn.gd" type="Script" id=8]

[node name="ExportToConn" type="WindowDialog"]
margin_right = 460.0
margin_bottom = 515.0
theme = ExtResource( 3 )
popup_exclusive = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionPath" parent="Container" instance=ExtResource( 6 )]
margin_top = 0.0
margin_bottom = 22.0

[node name="TableConn" parent="Container" instance=ExtResource( 1 )]
margin_top = 26.0
margin_right = 460.0
margin_bottom = 489.0

[node name="Action" type="HBoxContainer" parent="Container"]
margin_top = 493.0
margin_right = 460.0
margin_bottom = 515.0
alignment = 2

[node name="Start" type="Button" parent="Container/Action"]
margin_left = 361.0
margin_right = 402.0
margin_bottom = 22.0
text = "Start"

[node name="Cancel" type="Button" parent="Container/Action"]
margin_left = 406.0
margin_right = 460.0
margin_bottom = 22.0
text = "Cancel"

[node name="PythonWatcher" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="Container/Action/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Container/Action/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="output" from="PythonWatcher" to="." method="_on_PythonWatcher_output"]
